<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jacksen.camerademo.MainActivity">


    <Button
        android:id="@+id/open_sys_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sys_camera" />

    <Button
        android:id="@+id/open_sys_crop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sys_crop" />

    <Button
        android:id="@+id/open_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_camera" />

    <Button
        android:id="@+id/open_camera2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_camera2" />

    <Button
        android:id="@+id/open_jack_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_custom_camera" />

    <ImageView
        android:id="@+id/capture_picture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp" />
</LinearLayout>
